--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header>
+      <a class="logo">
+        <img src="img/logo.png" alt="Логотип городка Седона в Аризоне" width="25" height="25">
+      </a>
+      <nav>
+        <ul>
+          <li><a>Главная</a></li>
+          <li><a href="About_sedona.html">О Седоне</a></li>
+          <li><a href="Hotels.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    </main>
+    <footer>
+
+
+    </footer>
+
 
   </body>
 </html>
