--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <a class="logo">
-        <img src="img/logo.png" alt="Логотип городка Седона в Аризоне" width="25" height="25">
+        <img src="image/logo/logo.svg" alt="Логотип городка Седона в Аризоне" width="140" height="70">
       </a>
       <nav>
         <ul>
@@ -16,13 +16,130 @@
           <li><a href="Hotels.html">Гостиницы</a></li>
         </ul>
       </nav>
+        <div>
+          <ul>
+            <li>
+              <a href="#"><img src="image/icon/Поиск.png" alt="Поиск"></a>
+            </li>
+            <li>
+              <a href="#"><img src="image/icon/Избранное.png" alt="Добавить в Избранное"></a>
+            </li>
+            <li>
+              <a href="#">ХОЧУ СЮДА!</a>
+            </li>
+          </ul>
+
+        </div>
+
     </header>
     <main>
+      <h1 class="visually-hidden">Седона — небольшой городок в Аризоне. Добро пожаловать! </h1>
+      <section>
+        <h2 class="visually-hidden">Добро пожаловать в Седону!</h1>
+        <div>
+       <!-- <img src="image/Group 25.png" alt="Горы, вид на Седону"> -->
+
+        <img src="image/welcome.svg" alt="Добро пожаловать в Седону">
+        <p>Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</p>
+
+        </div>
+      </section>
+      <selection>
+        <h2 class="visually-hidden">Преимущества</h2>
+
+
+        <ul>
+          <li>
+            <h3>Настоящий городок</h3>
+            <p> Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+
+          </li>
+          <li>
+           <img src="image/photo-1.jpg" alt="Вид на Гостиницу">
+
+          </li>
+          <li>
+            <h3>Небольшая площадь</h3>
+            <p> Все достопримечательности находятся очень близко </p>
+
+          </li>
+          <li>
+            <h3>Красивая дорога</h3>
+            <hr>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li>
+            <h3>Красивая дорога</h3>
+            <hr>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li>
+            <img src="image/photo-2.jpg" alt="Вид на мост">
+
+           </li>
+           <li>
+            <h3>Там есть
+              мост дьявола</h3>
+            <hr>
+            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+        </ul>
+
+        <div>
+          <p>Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+          <p>Опытный персонал и качественное обслуживание!</p>
+        </div>
+
+          <ul>
+            <li><h3>Жилье</h3>
+             <p>Рекомендуем пожить в настоящем мотеле,
+              всё как в кино!</p>
+            </li>
+            <li><h3>Еда</h3>
+             <p>Всегда заказывайте
+              топовый фирменный бургер, вы не разочаруетесь!</p></li>
+           <li><h3>Сувениры</h3>
+             <p>Не только китайского, но и настоящего местного производства!</p>
+            </li>
+          </ul>
+      </selection>
+    </selection>
+      <section>
+        <h2 class="visually-hidden">Форма предполагаемые даты поездки </h2>
+        <p>Заинтересовались?
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <button type="button">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+      </selection>
+
+      <section>
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+
+          <form action="https://echo.htmlacademy.ru" method="post">
+
+              <input name="e-mail" type="text" value="Ваш e-mail">
+              <input type="submit" value="ПОДПИСАТЬСЯ">
+          </form>
+      </section>
 
     </main>
     <footer>
-
-
+      <div>
+      <ul>
+        <li>
+          <a href="#"><img src="image/vk/social-vk.png" alt="Ссылка на Вконтакте"></a>
+        </li>
+        <li>
+          <a href="#"><img src="image/vk/social-telegram.png" alt="Ссылка на Телеграм"></a>
+        </li>
+        <li>
+          <a href="#"><img src="image/vk/social-youtube.png" alt="Ссылка на Ютуб"></a>
+        </li>
+      </ul>
+      </div>
+      <a href="tel:+7818121212">+7 (812) 812-12-12</a>
+      <img src="image/Logo.svg" alt="Логотип HTML Academy">
     </footer>
 
 
