--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
       <h1 class="visually-hidden">Седона — небольшой городок в Аризоне. Добро пожаловать! </h1>
       <section>
-        <h2 class="visually-hidden">Добро пожаловать в Седону!</h1>
+        <h2 class="visually-hidden">Добро пожаловать в Седону!</h2>
         <div>
        <!-- <img src="image/Group 25.png" alt="Горы, вид на Седону"> -->
 
@@ -45,7 +45,7 @@
 
         </div>
       </section>
-      <selection>
+      <section>
         <h2 class="visually-hidden">Преимущества</h2>
 
 
@@ -103,14 +103,13 @@
              <p>Не только китайского, но и настоящего местного производства!</p>
             </li>
           </ul>
-      </selection>
-    </selection>
+      </section>
       <section>
         <h2 class="visually-hidden">Форма предполагаемые даты поездки </h2>
         <p>Заинтересовались?
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <button type="button">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
-      </selection>
+      </section>
 
       <section>
         <h2>Подпишитесь на рассылку</h2>
