Добавляет картинки и исправлены ошибки

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <nav>
         <ul>
           <li><a>Главная</a></li>
-          <li><a href="About_sedona.html">О Седоне</a></li>
-          <li><a href="Hotels.html">Гостиницы</a></li>
+          <li><a href="#">О Седоне</a></li>
+          <li><a href="#">Гостиницы</a></li>
         </ul>
       </nav>
         <div>
@@ -22,7 +22,7 @@
               <a href="#"><img src="image/icon/Поиск.png" alt="Поиск"></a>
             </li>
             <li>
-              <a href="#"><img src="image/icon/Избранное.png" alt="Добавить в Избранное"></a>
+              <a href="#"><img src="image/icon/heart.png" alt="Добавить в Избранное"></a><p>12</p>
             </li>
             <li>
               <a href="#">ХОЧУ СЮДА!</a>
@@ -34,16 +34,16 @@
     </header>
     <main>
       <h1 class="visually-hidden">Седона — небольшой городок в Аризоне. Добро пожаловать! </h1>
+
       <section>
         <h2 class="visually-hidden">Добро пожаловать в Седону!</h2>
-        <div>
-       <!-- <img src="image/Group 25.png" alt="Горы, вид на Седону"> -->
-
         <img src="image/welcome.svg" alt="Добро пожаловать в Седону">
-        <p>Седона — небольшой городок в Аризоне,
-          заслуживающий большего!</p>
 
-        </div>
+     </section>
+      <section><h2>Седона — небольшой городок в Аризоне,
+        заслуживающий большего! </h2>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+
       </section>
       <section>
         <h2 class="visually-hidden">Преимущества</h2>
@@ -53,9 +53,6 @@
           <li>
             <h3>Настоящий городок</h3>
             <p> Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-
-          </li>
-          <li>
            <img src="image/photo-1.jpg" alt="Вид на Гостиницу">
 
           </li>
@@ -77,9 +74,7 @@
           <li>
             <img src="image/photo-2.jpg" alt="Вид на мост">
 
-           </li>
-           <li>
-            <h3>Там есть
+             <h3>Там есть
               мост дьявола</h3>
             <hr>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -93,13 +88,16 @@
 
           <ul>
             <li><h3>Жилье</h3>
+              <img src="image/advantages/Advantage-icon1.png" alt="Жилье">
              <p>Рекомендуем пожить в настоящем мотеле,
               всё как в кино!</p>
             </li>
             <li><h3>Еда</h3>
+              <img src="image/advantages/Advantage-icon2.png" alt="Бургер">
              <p>Всегда заказывайте
               топовый фирменный бургер, вы не разочаруетесь!</p></li>
            <li><h3>Сувениры</h3>
+            <img src="image/advantages/Advantage-icon.png" alt="Сувениры">
              <p>Не только китайского, но и настоящего местного производства!</p>
             </li>
           </ul>
