--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a>Главная</a></li>
           <li><a href="#">О Седоне</a></li>
-          <li><a href="#">Гостиницы</a></li>
+          <li><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
         <div>
