Введены исправления: ссылки на изображение

--- a/catalog.html
+++ b/catalog.html
@@ -33,6 +33,7 @@
 
     </header>
     <main class="main-catalog">
+      <section>
       <h1 class="visually-hidden"> Гостиницы Седоны </h1>
 
       <div>
@@ -46,9 +47,9 @@
         <div class="checked-choose">
           <p>Инфраструктура:</p>
 
-          <input type="checkbox" name=subscribe-bath id="subscribe-field-bath"checked>
+          <input type="checkbox" name=subscribe-bath id="subscribe-field-bath" checked>
           <label for="subscribe-field-bath">Бассейн</label>
-          <input type="checkbox" name=subscribe-car id="subscribe-field-car"checked>
+          <input type="checkbox" name=subscribe-car id="subscribe-field-car" checked>
           <label for="subscribe-field-car">Парковка</label>
           <input type="checkbox" name=subscribe-wi-fi id="subscribe-field-wi-fi">
           <label for="subscribe-field-wi-fi">Wi-Fi</label>
@@ -64,11 +65,11 @@
           <label>
             <input type="radio" name="radio-home" value="Апартаменты">Апартаменты
           </label>
+
         </div>
         <div class="cost-form">
         <p>Стоимость, ₽: </p>
-        <div>
-        <label for="cost-from">от </label>
+           <label for="cost-from">от </label>
            <input type="text" value="0" id="cost-from">
        </div>
         <div>
@@ -104,7 +105,7 @@
         <ul>
           <li>
             <h3>Amara Resort & Spa</h3>
-            <img src="image/img catalog/hotel-1.jpg">
+            <img src="image/img-catalog/hotel-1.jpg" alt="Гостиница Amara Resort & Spa">
             <p>Гостиница</p><b>От 4000 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
@@ -112,7 +113,7 @@
           </li>
           <li>
             <h3>Villas at Poco Diablo</h3>
-            <img src="image/img catalog/hotel-2.jpg">
+            <img src="image/img-catalog/hotel-2.jpg" alt="Гостиница Villas at Poco Diablo">
             <p>Гостиница</p><b>От 5000 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
@@ -120,7 +121,7 @@
           </li>
           <li>
             <h3>Desert Quail Inn</h3>
-            <img src="image/img catalog/hotel-3.jpg">
+            <img src="image/img-catalog/hotel-3.jpg" alt="Гостиница Desert Quail Inn">
             <p>Гостиница</p><b>От 2500 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
@@ -128,7 +129,7 @@
           </li>
           <li>
             <h3>GreenTree Inn</h3>
-            <img src="image/img catalog/hotel-4.jpg">
+            <img src="image/img-catalog/hotel-4.jpg" alt="Гостиница GreenTree Inn">
             <p>Гостиница</p><b>От 1500 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
