--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <ul class="navigation-list">
           <li class="navigation-item"><a class="navigation-link" href="index.html">Главная</a></li>
           <li class="navigation-item"><a class="navigation-link" href="#">О Седоне</a></li>
-          <li class="navigation-item"><a class="navigation-link">Гостиницы</a></li>
+          <li class="navigation-item"><a class="navigation-link" href="#">Гостиницы</a></li>
         </ul>
       </nav>
         <div class="navigation-box">
@@ -34,7 +34,7 @@
     </header>
     <main class="main-catalog">
       <section>
-      <h1 class="visually-hidden"> Гостиницы Седоны </h1>
+      <h1> Гостиницы Седоны </h1>
 
       <div>
        <a href="index.html"><img src="img/home.png" alt="Ссылка на Главную страницу"></a>
@@ -45,17 +45,21 @@
 
        <form class="appointment-form" action="https://echo.htmlacademy.ru/" method="post">
         <div class="checked-choose">
-          <p>Инфраструктура:</p>
-
-          <input type="checkbox" name=subscribe-bath id="subscribe-field-bath" checked>
-          <label for="subscribe-field-bath">Бассейн</label>
-          <input type="checkbox" name=subscribe-car id="subscribe-field-car" checked>
-          <label for="subscribe-field-car">Парковка</label>
-          <input type="checkbox" name=subscribe-wi-fi id="subscribe-field-wi-fi">
-          <label for="subscribe-field-wi-fi">Wi-Fi</label>
+          <h2>Инфраструктура:</h2>
+          <label for="subscribe-field-bath">
+            <input type="checkbox" name="subscribe-bath" id="subscribe-field-bath" checked>
+            <span>Бассейн</span>
+        </label>
+        <label for="subscribe-field-car">
+          <input type="checkbox" name="subscribe-car" id="subscribe-field-car" checked>
+          <span>Парковка</span></label>
+          <label for="subscribe-field-wi-fi">
+            <input type="checkbox" name="subscribe-wi-fi" id="subscribe-field-wi-fi">
+          <span> Wi-Fi </span>
+        </label>
        </div>
         <div class="type-home">
-          <p>Тип жилья:</p>
+          <h2>Тип жилья:</h2>
           <label>
             <input type="radio" name="radio-home" value="Гостиница" checked>Гостиница
           </label>
@@ -91,14 +95,25 @@
       </section>
       <section>
         <h2>Найдено гостиниц</h2> <b >38</b>
-        <form class="appointment-form-select" action="https://echo.htmlacademy.ru/" method="get">
+
           <select name="theme">
           <option value="catalog.html?view=tile">Сначала дешевые </option>
           <option value="catalog.html?view=card">от 0</option>
           <option value="catalog.html?view=list">до 9000 </option>
           </select>
-          <input type="submit" value="Отправить" class="visually-hidden">
-        </form>
+          <ul>
+            </ul>
+            <li>
+              <input type="submit" value="catalog.html?view=tile" class="visually-hidden">
+            </li>
+            <li>
+              <input type="submit" value="catalog.html?view=card" class="visually-hidden">
+            </li>
+
+            <li>
+              <input type="submit" value="catalog.html?view=list" class="visually-hidden">
+            </li>
+          </ul>
 
       </section>
       <section>
@@ -109,6 +124,10 @@
             <p>Гостиница</p><b>От 4000 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
+             <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+             <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+             <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+             <img src="image/img-catalog/star 1.png" alt="Рейтинг">
              <span> Рейтинг: 8,5 </span>
           </li>
           <li>
@@ -117,7 +136,12 @@
             <p>Гостиница</p><b>От 5000 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-             <span> Рейтинг: 9,2 </span>
+            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+
+            <span> Рейтинг: 9,2 </span>
           </li>
           <li>
             <h3>Desert Quail Inn</h3>
@@ -125,7 +149,12 @@
             <p>Гостиница</p><b>От 2500 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-             <span> Рейтинг: 6,9</span>
+            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+
+
+            <span> Рейтинг: 6,9</span>
           </li>
           <li>
             <h3>GreenTree Inn</h3>
@@ -133,7 +162,10 @@
             <p>Гостиница</p><b>От 1500 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-             <span> Рейтинг: 5,0 </span>
+            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+
+            <span> Рейтинг: 5,0 </span>
           </li>
 
         </ul>
@@ -158,7 +190,7 @@
           <form action="https://echo.htmlacademy.ru" method="post">
 
               <input name="e-mail" type="email" placeholder="Ваш e-mail">
-              <input type="submit" value="ПОДПИСАТЬСЯ">
+              <button type="submit" value="ПОДПИСАТЬСЯ">
           </form>
       </section>
 
