Правки в форме и исправление ошибок

--- a/catalog.html
+++ b/catalog.html
@@ -102,7 +102,7 @@
           <option value="catalog.html?view=list">до 9000 </option>
           </select>
           <ul>
-            </ul>
+
             <li>
               <input type="submit" value="catalog.html?view=tile" class="visually-hidden">
             </li>
@@ -124,10 +124,10 @@
             <p>Гостиница</p><b>От 4000 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-             <img src="image/img-catalog/star 1.png" alt="Рейтинг">
-             <img src="image/img-catalog/star 1.png" alt="Рейтинг">
-             <img src="image/img-catalog/star 1.png" alt="Рейтинг">
-             <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+             <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+             <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+             <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+             <img src="image/img-catalog/star-1.png" alt="Рейтинг">
              <span> Рейтинг: 8,5 </span>
           </li>
           <li>
@@ -136,10 +136,10 @@
             <p>Гостиница</p><b>От 5000 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
 
             <span> Рейтинг: 9,2 </span>
           </li>
@@ -149,9 +149,9 @@
             <p>Гостиница</p><b>От 2500 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
 
 
             <span> Рейтинг: 6,9</span>
@@ -162,8 +162,8 @@
             <p>Гостиница</p><b>От 1500 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star 1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
 
             <span> Рейтинг: 5,0 </span>
           </li>
@@ -190,7 +190,7 @@
           <form action="https://echo.htmlacademy.ru" method="post">
 
               <input name="e-mail" type="email" placeholder="Ваш e-mail">
-              <button type="submit" value="ПОДПИСАТЬСЯ">
+              <button type="submit">ПОДПИСАТЬСЯ</button>
           </form>
       </section>
 
