Исправлены кнопки сортировки

--- a/catalog.html
+++ b/catalog.html
@@ -97,21 +97,21 @@
 
           <select name="theme">
 
-          <option value="catalog.html?view=tile">Сначала дешевые </option>
-          <option value="catalog.html?view=card">Сначала дорогие</option>
-          <option value="catalog.html?view=list">Сначала популярные</option>
+          <option value="poor">Сначала дешевые </option>
+          <option value="rich">Сначала дорогие</option>
+          <option value="popular">Сначала популярные</option>
           </select>
           <ul>
 
             <li>
-              <input type="submit" value="catalog.html?view=tile" class="visually-hidden">
+              <a href="catalog.html?view=tile">заголовок</a>
             </li>
             <li>
-              <input type="submit" value="catalog.html?view=card" class="visually-hidden">
+              <a href="catalog.html?view=card">карточки</a>
             </li>
 
             <li>
-              <input type="submit" value="catalog.html?view=list" class="visually-hidden">
+              <a href="catalog.html?view=list">список</a>
             </li>
           </ul>
 
