Переименовала картинку поиск

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navigation-box">
           <ul class="navigation-box-list">
             <li class="navigation-box-item">
-              <a class="navigation-box-link" href="#"><img src="image/icon/Поиск.png" alt="Поиск"></a>
+              <a class="navigation-box-link" href="#"><img src="image/icon/search.png" alt="Поиск"></a>
             </li>
             <li class="navigation-box-item">
               <a class="navigation-box-link" href="#"><img src="image/icon/heart.png" alt="Добавить в Корзину"></a><p>12</p>
