--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a class="logo">
-        <img src="image/logo/logo.svg" alt="Логотип городка Седона в Аризоне" width="140" height="70">
+        <img src="image/logo-header.svg" alt="Логотип городка Седона в Аризоне" width="140" height="70">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -17,14 +17,14 @@
         </ul>
       </nav>
         <div class="navigation-box">
-          <ul class="navigation-list-box">
-            <li class="navigation-item-box">
-              <a class="navigation-link-box" href="#"><img src="image/icon/Поиск.png" alt="Поиск"></a>
+          <ul class="navigation-box-list">
+            <li class="navigation-box-item">
+              <a class="navigation-box-link" href="#"><img src="image/icon/search.png" alt="Поиск"></a>
             </li>
-            <li class="navigation-item-box">
-              <a class="navigation-link-box" href="#"><img src="image/icon/heart.png" alt="Добавить в Корзину"></a><p>12</p>
+            <li class="navigation-box-item">
+              <a class="navigation-box-link" href="#"><img src="image/icon/heart.png" alt="Добавить в Корзину"></a><p>12</p>
             </li>
-            <li class="navigation-item-box button">
+            <li class="navigation-box-item button">
               <a href="#">ХОЧУ СЮДА!</a>
             </li>
           </ul>
@@ -33,7 +33,7 @@
 
     </header>
     <main class="main-catalog">
-      <section>
+      <section class="form-main">
       <h1> Гостиницы Седоны </h1>
 
       <div>
@@ -92,7 +92,7 @@
       </form>
 
       </section>
-      <section>
+      <section class="search-hotel">
         <h2>Найдено гостиниц</h2> <b >38</b>
 
           <select name="theme">
@@ -101,68 +101,60 @@
           <option value="rich">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
           </select>
-          <ul>
+          <ul class="theme-view-list">
 
-            <li>
+            <li class="theme-view-items">
               <a href="catalog.html?view=tile">заголовок</a>
             </li>
-            <li>
+            <li class="theme-view-items">
               <a href="catalog.html?view=card">карточки</a>
             </li>
 
-            <li>
+            <li class="theme-view-items">
               <a href="catalog.html?view=list">список</a>
             </li>
           </ul>
 
       </section>
-      <section>
-        <ul>
-          <li>
+      <section class="card-hotel">
+        <ul class="card-hotel-list">
+          <li class="card-hotel-items">
             <h3>Amara Resort & Spa</h3>
             <img src="image/img-catalog/hotel-1.jpg" alt="Гостиница Amara Resort & Spa">
             <p>Гостиница</p><b>От 4000 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
              <img src="image/img-catalog/star-1.png" alt="Рейтинг">
-             <img src="image/img-catalog/star-1.png" alt="Рейтинг">
-             <img src="image/img-catalog/star-1.png" alt="Рейтинг">
-             <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+
              <span> Рейтинг: 8,5 </span>
           </li>
-          <li>
+          <li class="card-hotel-items">
             <h3>Villas at Poco Diablo</h3>
             <img src="image/img-catalog/hotel-2.jpg" alt="Гостиница Villas at Poco Diablo">
             <p>Гостиница</p><b>От 5000 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
             <img src="image/img-catalog/star-1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
+
 
             <span> Рейтинг: 9,2 </span>
           </li>
-          <li>
+          <li class="card-hotel-items">
             <h3>Desert Quail Inn</h3>
             <img src="image/img-catalog/hotel-3.jpg" alt="Гостиница Desert Quail Inn">
             <p>Гостиница</p><b>От 2500 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
             <img src="image/img-catalog/star-1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
-            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
-
 
             <span> Рейтинг: 6,9</span>
           </li>
-          <li>
+          <li class="card-hotel-items">
             <h3>GreenTree Inn</h3>
             <img src="image/img-catalog/hotel-4.jpg" alt="Гостиница GreenTree Inn">
             <p>Гостиница</p><b>От 1500 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-            <img src="image/img-catalog/star-1.png" alt="Рейтинг">
             <img src="image/img-catalog/star-1.png" alt="Рейтинг">
 
             <span> Рейтинг: 5,0 </span>
@@ -170,7 +162,7 @@
 
         </ul>
 
-        <div>
+        <div class="pangination-main">
           <a href="#"><p>1</p></a>
           <a href="#"><p>2</p></a>
           <a href="#"><p>3</p></a>
@@ -183,11 +175,11 @@
 
       </section>
 
-          <section>
+          <section class="newsletter">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
 
-          <form action="https://echo.htmlacademy.ru" method="post">
+          <form class="form-newsletter" action="https://echo.htmlacademy.ru" method="post">
 
               <input name="e-mail" type="email" placeholder="Ваш e-mail">
               <button type="submit">ПОДПИСАТЬСЯ</button>
@@ -195,16 +187,16 @@
       </section>
 
     </main>
-    <footer>
+    <footer class="page-footer">
       <div>
-      <ul>
-        <li>
+      <ul class="page-footer-list">
+        <li class="page-footer-items">
           <a href="#"><img src="image/vk/social-vk.png" alt="Ссылка на Вконтакте"></a>
         </li>
-        <li>
+        <li class="page-footer-items">
           <a href="#"><img src="image/vk/social-telegram.png" alt="Ссылка на Телеграм"></a>
         </li>
-        <li>
+        <li class="page-footer-items">
           <a href="#"><img src="image/vk/social-youtube.png" alt="Ссылка на Ютуб"></a>
         </li>
       </ul>
