--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 
     </header>
     <main class="main-index">
-      <h1 class="visually-hidden">Седона — небольшой городок в Аризоне. Добро пожаловать! </h1>
 
       <section class="title-welcome">
-        <h2 class="visually-hidden">Добро пожаловать в Седону!</h2>
+        <h1 class="visually-hidden">Седона - город в Аризоне</h1>
         <img src="image/welcome.svg" alt="Добро пожаловать в Седону">
 
      </section>
