Отправляет стоимость на сервер, добоавила

--- a/catalog.html
+++ b/catalog.html
@@ -81,11 +81,11 @@
           <div class="cost-wrapper">
            <div class="cost-from">
             <label for="cost-from">от</label>
-            <input type="number" value="0" id="cost-from">
+            <input type="number" value="0" id="cost-from" name="input-cost-from">
            </div>
            <div>
             <label for="cost-to">до </label>
-            <input type="number" value="9000" id="cost-to">
+            <input type="number" value="9000" id="cost-to" name="input-cost-to">
            </div>
           </div>
 
