Изменила форматы изображений на svg

--- a/catalog.html
+++ b/catalog.html
@@ -19,10 +19,10 @@
         <div class="navigation-box">
           <ul class="navigation-box-list">
             <li class="navigation-box-item">
-              <a class="navigation-box-link" href="#"><img src="image/icon/search.png" alt="Поиск"></a>
+              <a class="navigation-box-link" href="#"><img src="image/icon/search.svg" alt="Поиск"></a>
             </li>
             <li class="navigation-box-item">
-              <a class="navigation-box-link" href="#"><img src="image/icon/heart.png" alt="Добавить в Корзину"></a><span>12</span>
+              <a class="navigation-box-link" href="#"><img src="image/icon/heart.svg" alt="Добавить в Корзину"></a><span>12</span>
             </li>
             <li class="navigation-box-item button">
               <a href="#">ХОЧУ СЮДА!</a>
@@ -37,7 +37,8 @@
       <h1> Гостиницы Седоны </h1>
 
       <div>
-       <a href="index.html"><img src="img/home.png" alt="Ссылка на Главную страницу"></a>
+       <a href="index.html"><img src="image/icon/home.svg" alt="Ссылка на Главную страницу"></a>
+       <img src="image/icon/arrow.svg" alt="Стрелка">
 
        <p><a>Гостиницы</a></p>
       </div>
