--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="navigation-box">
           <ul class="navigation-box-list">
             <li class="navigation-box-item">
-              <a class="navigation-box-link" href="#"><img src="image/icon/search.png" alt="Поиск"></a>
+              <a class="navigation-box-link" href="#"><img src="image/icon/search.svg" alt="Поиск"></a>
             </li>
             <li class="navigation-box-item">
-              <a class="navigation-box-link" href="#"><img src="image/icon/heart.png" alt="Добавить в Корзину"></a><p>12</p>
+              <a class="navigation-box-link" href="#"><img src="image/icon/heart.svg" alt="Добавить в Корзину"></a><p>12</p>
             </li>
             <li class="navigation-item-box button">
               <a href="#">ХОЧУ СЮДА!</a>
@@ -87,16 +87,16 @@
 
           <ul>
             <li><h3>Жилье</h3>
-              <img src="image/advantages/Advantage-icon1.png" alt="Жилье">
+              <img src="image/advantage/home.svg" alt="Жилье">
              <p>Рекомендуем пожить в настоящем мотеле,
               всё как в кино!</p>
             </li>
             <li><h3>Еда</h3>
-              <img src="image/advantages/Advantage-icon2.png" alt="Бургер">
+              <img src="image/advantage/food.svg" alt="Бургер">
              <p>Всегда заказывайте
               топовый фирменный бургер, вы не разочаруетесь!</p></li>
            <li><h3>Сувениры</h3>
-            <img src="image/advantages/Advantage-icon.png" alt="Сувениры">
+            <img src="image/advantage/present.svg" alt="Сувениры">
              <p>Не только китайского, но и настоящего местного производства!</p>
             </li>
           </ul>
