--- a/catalog.html
+++ b/catalog.html
@@ -19,10 +19,10 @@
         <div class="navigation-box">
           <ul class="navigation-box-list">
             <li class="navigation-box-item">
-              <a class="navigation-box-link" href="#"><img src="image/icon/search.svg" alt="Поиск"></a>
+              <a class="navigation-box-link" href="#"><img src="image/icon/search.svg" alt="Поиск" width="20" height="20"></a>
             </li>
             <li class="navigation-box-item">
-              <a class="navigation-box-link" href="#"><img src="image/icon/heart.svg" alt="Добавить в Корзину"></a><span>12</span>
+              <a class="navigation-box-link" href="#"><img src="image/icon/heart.svg" alt="Добавить в Корзину" width="20" height="20"></a><span>12</span>
             </li>
             <li class="navigation-box-item button">
               <a href="#">ХОЧУ СЮДА!</a>
@@ -37,8 +37,8 @@
       <h1> Гостиницы Седоны </h1>
 
       <div>
-       <a href="index.html"><img src="image/icon/home.svg" alt="Ссылка на Главную страницу"></a>
-       <img src="image/icon/arrow.svg" alt="Стрелка">
+       <a href="index.html"><img src="image/icon/home.svg" alt="Ссылка на Главную страницу" width="13" height="15"></a>
+
 
        <p><a>Гостиницы</a></p>
       </div>
@@ -133,7 +133,7 @@
         <ul class="card-hotel-list">
           <li class="card-hotel-items">
             <h3>Amara Resort & Spa</h3>
-            <img src="image/img-catalog/hotel-1.jpg" alt="Гостиница Amara Resort & Spa">
+            <img src="image/img-catalog/hotel-1.jpg" alt="Гостиница Amara Resort & Spa" width="300" height="212">
             <p>Гостиница</p><b>От 4000 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
@@ -145,7 +145,7 @@
           </li>
           <li class="card-hotel-items">
             <h3>Villas at Poco Diablo</h3>
-            <img src="image/img-catalog/hotel-2.jpg" alt="Гостиница Villas at Poco Diablo">
+            <img src="image/img-catalog/hotel-2.jpg" alt="Гостиница Villas at Poco Diablo" width="300" height="212">
             <p>Гостиница</p><b>От 5000 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
@@ -158,7 +158,7 @@
           </li>
           <li class="card-hotel-items">
             <h3>Desert Quail Inn</h3>
-            <img src="image/img-catalog/hotel-3.jpg" alt="Гостиница Desert Quail Inn">
+            <img src="image/img-catalog/hotel-3.jpg" alt="Гостиница Desert Quail Inn" width="300" height="212">
             <p>Гостиница</p><b>От 2500 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
@@ -170,7 +170,7 @@
           </li>
           <li class="card-hotel-items">
             <h3>GreenTree Inn</h3>
-            <img src="image/img-catalog/hotel-4.jpg" alt="Гостиница GreenTree Inn">
+            <img src="image/img-catalog/hotel-4.jpg" alt="Гостиница GreenTree Inn" width="300" height="212">
             <p>Гостиница</p><b>От 1500 P</b>
             <a href="#" class="button">Подробнее</a>
             <button class="button" type="button">В избранное</button>
@@ -224,18 +224,18 @@
       <div>
       <ul class="page-footer-list">
         <li class="page-footer-items">
-          <a href="#"><img src="image/vk/social-vk.png" alt="Ссылка на Вконтакте"></a>
+          <a href="#"><img src="image/vk/social-vk.png" alt="Ссылка на Вконтакте"  width="24" height="14"></a>
         </li>
         <li class="page-footer-items">
-          <a href="#"><img src="image/vk/social-telegram.png" alt="Ссылка на Телеграм"></a>
+          <a href="#"><img src="image/vk/social-telegram.png" alt="Ссылка на Телеграм" width="18" height="16"></a>
         </li>
         <li class="page-footer-items">
-          <a href="#"><img src="image/vk/social-youtube.png" alt="Ссылка на Ютуб"></a>
+          <a href="#"><img src="image/vk/social-youtube.png" alt="Ссылка на Ютуб" width="22" height="17"></a>
         </li>
       </ul>
       </div>
       <a href="tel:+7818121212">+7 (812) 812-12-12</a>
-      <img src="image/Logo.svg" alt="Логотип HTML Academy">
+      <img src="image/Logo.svg" alt="Логотип HTML Academy" width="115" height="33">
     </footer>
 
 
